--- a/assets/css/sass/typography.scss
+++ b/assets/css/sass/typography.scss
@@ -82,3 +82,7 @@ h1, h2, h3, h4, h5 {
     top: -5px;
 }
 
+.two-pane ul {
+    list-style: disc;
+    margin: 1rem 2rem;
+}
